correction mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ footer {
   }
 
   footer {
-    position: relative;
+    /* position: relative; */
   }
 
   .joinus {
